--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,8 +10,15 @@
 // Custom definitions may go here
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+repositories {
+    jcenter()
+    maven {
+        url  "https://dl.bintray.com/acmerobotics/maven"
+    }
+}
 dependencies {
     implementation project(':FtcDashboard')
+    implementation 'com.acmerobotics.roadrunner:core:0.1.0'
 }
 android {
     compileOptions {
