--- a/build.common.gradle
+++ b/build.common.gradle
@@ -64,6 +64,8 @@ android {
         //
         versionCode vCode
         versionName vName
+
+        multiDexEnabled true
     }
 
     // Advanced user code might just want to use Vuforia directly, so we set up the libs as needed
@@ -98,5 +100,10 @@ repositories {
     flatDir {
         dirs rootProject.file('libs')
     }
+    google()
+}
+
+dependencies {
+    implementation 'com.android.support:multidex:1.0.3'
 }
 apply from: 'build.release.gradle'
